--- a/Dallmeier/CustomerAttribute/view/frontend/templates/extra_field.phtml
+++ b/Dallmeier/CustomerAttribute/view/frontend/templates/extra_field.phtml
@@ -1,8 +1,17 @@
-<div class="field tenant_name">
+<div class="field tenant_name required">
     <label class="label" for="tenant_name">
         <span><?= $block->escapeHtml(__('Tenant name')) ?></span>
     </label>
     <div class="control">
-        <input type="text" name="tenant_name" id="tenant_name" value="" title="<?= $block->escapeHtmlAttr(__('Tenant name')) ?>" class="input-text">
+        <input type="text" data-validate="{required:true,'no-whitespace':true}" name="tenant_name" id="tenant_name" value="" title="<?= $block->escapeHtmlAttr(__('Tenant name')) ?>" class="input-text">
+    </div>
+</div>
+
+<div class="field domain_name">
+    <label class="label" for="domain_name">
+        <span><?= $block->escapeHtml(__('Domain name')) ?></span>
+    </label>
+    <div class="control">
+        <input type="text" data-validate="{'no-whitespace':true}" name="domain_name" id="domain_name" value="" title="<?= $block->escapeHtmlAttr(__('Domain name')) ?>" class="input-text">
     </div>
 </div>
