--- a/Dallmeier/CustomerAttribute/view/frontend/templates/extra_field.phtml
+++ b/Dallmeier/CustomerAttribute/view/frontend/templates/extra_field.phtml
@@ -1,3 +1,12 @@
+<?php
+/**
+ * Copyright © Magento, Inc. All rights reserved.
+ * See COPYING.txt for license details.
+ */
+
+/** @var \Magento\Framework\View\Element\Template $block */
+?>
+
 <div class="field tenant_name required">
     <label class="label" for="tenant_name">
         <span><?= $block->escapeHtml(__('Tenant name')) ?></span>
@@ -12,6 +21,6 @@
         <span><?= $block->escapeHtml(__('Domain name')) ?></span>
     </label>
     <div class="control">
-        <input type="text" data-validate="{'no-whitespace':true}" name="domain_name" id="domain_name" value="" title="<?= $block->escapeHtmlAttr(__('Domain name')) ?>" class="input-text">
+        <input type="text" data-validate="{'validate-minimum-age':true}" name="domain_name" id="domain_name" value="" title="<?= $block->escapeHtmlAttr(__('Domain name')) ?>" class="input-text">
     </div>
 </div>
